# json2xml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check.py  codefresh.yml  example.cpp  json2xml.cpp  json2xml.hpp
cmake/: build_type.cmake
ct/: Dockerfile  conftest.py  conversions_test.py  pytest.ini
dev/: Dockerfile
examples/: CMakeLists.txt  main.cpp  test.json  test2.json  test3.json
include/ert/: json2xml.hpp
util/: beautifyJson.perl  xml2json.py
